--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<p>This is an app that generates random strong passwords, and helps you to remember them.</p>
 				</div>	
 				<p><a href="#accounts" data-role="button">Continue</a></p>
-				<p><a data-role="button" id='dropboxButton' onclick='linktoDropBox()'>Link to Dropbox</a></p>
+				<p><a data-role="button" onclick='linktoDropBox()'>Link to Dropbox</a></p>
 				<div id='wrapper'>
 					<div id="main" style="display:none">
 				 		Empty list that will be populated with tasks 
