add sign off original + pm

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<input id="newTask" type="text" placeholder="Enter a new task..." />
 					<button id="addButton" type="submit">Add Task</button>
 				</form>
+			<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
 			</div>
 
 			<div id="login">
