--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<script src="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 		<script src="https://www.dropbox.com/static/api/dropbox-datastores-1.0-latest.js"></script>
-		<script type="text/javascript" src='libs/kendo.all.min.js'></script>
+		<script type="text/javascript" src='kendo.all.min.js'></script>
 		<!--<script src="tutorial.js"></script>-->
 		<script src='pm.js'></script>
 		<!-- style sheets kendo jquery own -->
