--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 		<link href='https://fonts.googleapis.com/css?family=Linden+Hill' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Chelsea+Market' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+		<!-- phone gap stuff meta?-->
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0 user-scalable=0"/> 
+		<meta name="apple-mobile-web-app-capable" content="yes" />
 	</head>
 	<body>
 		<div data-role="page" data-title="home" id="home">
