--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 				<div data-role='navbar'>
 					<ul>
 						<!-- make it disabled -->
-						<li><a href='#bank'>Story Bank</a></li>
-						<li><a href='#accounts'>Accounts</a></li>
-						<li><a href='#game'>Game</a></li>
+						<li><a href='#bank' id='home-bank' class='ui-disabled'>Story Bank</a></li>
+						<li><a href='#accounts' id='home-accounts' class='ui-disabled'>Accounts</a></li>
+						<li><a href='#game' id='home-game' class='ui-disabled'>Game</a></li>
 					</ul>
 				</div>
 			</div>
