add delete all stories for testing

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 					</form>
 					<p><a href="#accounts" data-role="button">Continue</a></p>
 					<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
+					<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>
 					</div>
 				<div id="login">
 					<button id="loginButton">Link to Dropbox</button>
