get rid of the tasktutorial

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<p>This is an app that generates random strong passwords, and helps you to remember them.</p>
 				</div>	
 				<div id='wrapper'>
-					<div id="main" style="display:none">
+					<!--<div id="main" style="display:none">
 				 		Empty list that will be populated with tasks 
 					<ul id="tasks"></ul>
 
@@ -43,7 +43,7 @@
 					<form id="addForm" method="post">
 					<input id="newTask" type="text" placeholder="Enter a new task..." />
 					<button id="addButton" type="submit">Add Task</button>
-					</form>
+					</form>-->
 					<p><a href="#accounts" data-role="button">Continue</a></p>
 					<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
 					<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>
