get rid of the tasktutorial

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 				<p>This is an app that generates random strong passwords, and helps you to remember them.</p>
 				</div>	
 				<div id='wrapper'>
-					<!--<div id="main" style="display:none">
-				 		Empty list that will be populated with tasks 
+					<div id="main" style="display:none">
+				 	<!--	Empty list that will be populated with tasks 
 					<ul id="tasks"></ul>
 
 					Form to collect new tasks 
