--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<p><a href="#accounts" data-role="button">Continue</a></p>
 					<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
 					<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>
-					<a href='#generateRandomness' data-role='button'>SHA PAge</a>
+					<div id='rehearsalReminder'></div>
 					</div>
 				<div id="login">
 					<button id="loginButton">Link to Dropbox</button>
