--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
 					<input id="newTask" type="text" placeholder="Enter a new task..." />
 					<button id="addButton" type="submit">Add Task</button>
 					</form>-->
-					<p><a href="#accounts" data-role="button">Continue</a></p>
-					<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
-					<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>
-					<div id='rehearsalReminder'></div>
+						<p><a href="#accounts" data-role="button">Continue</a></p>
+						<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
+						<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>
+						<div id='rehearsalReminder'>
+							<div id='urgentRehearsal'></div>
+							<div id='regularRehearsal'></div>
+						</div>
 					</div>
 				<div id="login">
 					<button id="loginButton">Link to Dropbox</button>
@@ -182,7 +185,7 @@
 			<div data-role='header'><h1>Let us make some real randomness</h1></div>
 			<div data-role='content'>
 				<h2></h2>
-				<p><textarea id='randomness' cols='100' rows='10'> </textarea></p>
+				<p><textarea id='randomness' cols='100' rows='40'> </textarea></p>
 				<input id='submitRandom' type='submit' value='Generate Randomness & Start' onclick='startGame()'/>
 
 			</div>
