--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 			<div data-role='header'><h1>Let us make some real randomness</h1></div>
 			<div data-role='content'>
 				<h2></h2>
+				<p>Please enter a few (at least 30) random characters </p>
 				<p><textarea id='randomness' cols='100' rows='40'> </textarea></p>
 				<input id='submitRandom' type='submit' value='Generate Randomness & Start' onclick='startGame()'/>
 
