--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
 	</head>
 	<body>
 		<div data-role="page" data-title="home" id="home">
-			<div data-role="header"><h1>Welcome</h1></div>
+			<div data-role="header"><h1>Welcome</h1>
+				<div data-role='navbar'>
+					<ul>
+						<li><a href='#bank'>Story Bank</a></li>
+						<li><a href='#accounts'>Accounts</a></li>
+						<li><a href='#game'>Game</a></li>
+					</ul>
+				</div>
+			</div>
 			<div data-role="content">
 				<img src='reminder.png' id='clock'/>
 				<div id="home-words">
