--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</head>
 	<body>
 		<div data-role="page" data-title="home" id="home">
-			<div data-role="header"><h1>Welcome</h1>
+			<div data-role="header">
 				<div data-role='navbar'>
 					<ul>
 						<li><a href='#bank'>Story Bank</a></li>
