--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>-->
 
+		<script src="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 		<script src="https://www.dropbox.com/static/api/dropbox-datastores-1.0-latest.js"></script>
 		<script type="text/javascript" src='kendo.all.min.js'></script>
 		<!--<script src="tutorial.js"></script>-->
@@ -16,6 +17,7 @@
 		<link rel='stylesheet' href='kendo.common.min.css'/>
 		<link rel='stylesheet' href='kendo.rtl.min.css'/>
 		<link rel='stylesheet' href='kendo.default.min.css'/>
+		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" />
 		<link rel='stylesheet' href='pm.css'/>
 		<link href='https://fonts.googleapis.com/css?family=Linden+Hill' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Chelsea+Market' rel='stylesheet' type='text/css'>
