--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div data-role="page" data-title="home" id="home">
 			<div data-role="header">
 				<div data-role='navbar'>
-					<ul>
+					<ul class='menu'>
 						<li><a href='#bank'>Story Bank</a></li>
 						<li><a href='#accounts'>Accounts</a></li>
 						<li><a href='#game'>Game</a></li>
