--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 				<div data-role='navbar'>
 					<ul class='menu'>
 						<li><a class='logo' ref='#'><img src="box_logo.jpg" alt="logo"/></a></li>
-						<li><a href='#bank' id='bank-bank'>STORY BANK</a></li>
-						<li><a href='#accounts' id='bank-accounts'>ACCOUNTS</a></li>
-						<li><a href='#game' id='bank-game' >GAME</a></li>
+						<li><a href='#bank' id='accounts-bank'>STORY BANK</a></li>
+						<li><a href='#accounts' id='accounts-accounts'>ACCOUNTS</a></li>
+						<li><a href='#game' id='accounts-game' >GAME</a></li>
 					</ul>
 				</div>
 			</div>
@@ -125,7 +125,16 @@
 		</div>
 		<!-- GAME PAGE-->
 		<div data-role="page" data-title="game" id="game">
-			<div data-role="header"><h1>Memory Game</h1></div>
+			<div data-role="header">
+				<div data-role='navbar'>
+					<ul class='menu'>
+						<li><a class='logo' ref='#'><img src="box_logo.jpg" alt="logo"/></a></li>
+						<li><a href='#bank' id='game-bank'>STORY BANK</a></li>
+						<li><a href='#accounts' id='game-accounts'>ACCOUNTS</a></li>
+						<li><a href='#game' id='game-game' >GAME</a></li>
+					</ul>
+				</div>
+			</div>
 			<div data-role="content">
 				<div data-role='content' id='gamebeginning'>
 					<p>How many stories can you memorize?</p>
