--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<link rel='stylesheet' href='kendo.default.min.css'/>
 		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" />
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+		<link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css" />
 		<link rel='stylesheet' href='pm.css'/>
-		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Linden+Hill' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Chelsea+Market' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css' />
+		<link href='https://fonts.googleapis.com/css?family=Linden+Hill' rel='stylesheet' type='text/css' />
+		<link href='https://fonts.googleapis.com/css?family=Chelsea+Market' rel='stylesheet' type='text/css' />
+		<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css' />
 		<!-- phone gap stuff meta?-->
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0 user-scalable=0"/> 
@@ -142,16 +142,6 @@
 					<div class='buttondiv'>
 						<a class='halfbutton' data-role='button' onclick='randomnessGenerator()' >Start</a>
 					</div>
-				</div>
-			</div>
-			<div data-role='footer' data-id='fool' data-position='fixed'>
-				<div data-role='navbar'>
-					<ul>
-						<!-- make it disabled -->
-						<li><a href='#bank'>Story Bank</a></li>
-						<li><a href='#accounts'>Accounts</a></li>
-						<li><a href='#game'>Game</a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
