--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<div data-role='navbar'>
 					<ul class='menu'>
 						<li><a class='logo' ref='#'><img src="box_logo.jpg" alt="logo"/></a></li>
-						<li><a href='#bank' id='bank-bank'>STORY BANK</a></li>
+						<li><a href='#bank' class='click' id='bank-bank'>STORY BANK</a></li>
 						<li><a href='#accounts' id='bank-accounts'>ACCOUNTS</a></li>
 						<li><a href='#game' id='bank-game' >GAME</a></li>
 					</ul>
@@ -102,7 +102,7 @@
 					<ul class='menu'>
 						<li><a class='logo' ref='#'><img src="box_logo.jpg" alt="logo"/></a></li>
 						<li><a href='#bank' id='accounts-bank'>STORY BANK</a></li>
-						<li><a href='#accounts' id='accounts-accounts'>ACCOUNTS</a></li>
+						<li><a href='#accounts' class='click' id='accounts-accounts'>ACCOUNTS</a></li>
 						<li><a href='#game' id='accounts-game' >GAME</a></li>
 					</ul>
 				</div>
@@ -131,7 +131,7 @@
 						<li><a class='logo' ref='#'><img src="box_logo.jpg" alt="logo"/></a></li>
 						<li><a href='#bank' id='game-bank'>STORY BANK</a></li>
 						<li><a href='#accounts' id='game-accounts'>ACCOUNTS</a></li>
-						<li><a href='#game' id='game-game' >GAME</a></li>
+						<li><a href='#game' class='click' id='game-game' >GAME</a></li>
 					</ul>
 				</div>
 			</div>
