--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div data-role="header">
 				<div data-role='navbar'>
 					<ul class='menu'>
-						<li><a class='logo' ref='#'><img src="box_logo.jpg" alt="logo"/></a></li>
+						<li><a class='logo' ref='#' onclick='displayInfo'><img src="box_logo.jpg" alt="logo"/></a></li>
 						<li><a href='#bank' id='home-bank' class='ui-disabled'>STORY BANK</a></li>
 						<li><a href='#accounts' id='home-accounts' class='ui-disabled'>ACCOUNTS</a></li>
 						<li><a href='#game' id='home-game' class='ui-disabled'>GAME</a></li>
@@ -192,5 +192,9 @@
 				<input id='submitRandom' type='submit' value='Generate Randomness & Start' onclick='startGame()'/>
 
 			</div>
+		</div>
+		<div data-role='page' id="dialog" title="Basic dialog">
+  			<p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+		</div>
 	</body>
 </html>
