--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 			</div>
 		</div>
-		<div id="dialog" title="Basic dialog">
+		<div id="dialog" data-rel='dialog' title="Basic dialog">
   			<p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
 		</div>
 	</body>
