give up on button

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 		</div>
 		<div id="dialog" title="Basic dialog">
   			<p>This application is built for my undergraduate senior thesis research project at Carnegie Mellon University.</p>
-  			<button id='dialog-close'>Close</button>
+  			<a data-role='button' id='dialog-close'>Close</a>
 		</div>
 	</body>
 </html>
