--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 			</div>
 		</div>
 		<!-- Hide UI until user has authenticated -->
-
+		<div data-role='page' data-title="board" id="board">
+			
+		</div>
 		<!-- BANK PAGE -->
 		<div data-role="page" data-title="bank" id="bank">
 			<div data-role="header">
