--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 		</div>
 		<!-- Hide UI until user has authenticated -->
 		<div data-role='page' data-title="board" id="board">
-			
+
 		</div>
 		<!-- BANK PAGE -->
-		<div data-role="page" data-title="bank" id="bank">
+		<div data-role="page" data-title="bank" id="bank" class='non-half'>
 			<div data-role="header">
 				<div data-role='navbar'>
 					<ul class='menu'>
