--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 		</div>
 		<!-- BANK PAGE -->
-		<div data-role="page" data-title="bank" id="bank" class='non-half'>
+		<div data-role="page" data-title="bank" id="bank">
 			<div data-role="header">
 				<div data-role='navbar'>
 					<ul class='menu'>
@@ -88,7 +88,7 @@
 					</ul>
 				</div>
 			</div>
-			<div data-role="content">
+			<div data-role="content" class='non-half'>
 				<div data-role='content' id='banklist'>
 					<p>Please play the memory game to add stories to story bank</p>
 					<a data-role='button' href='#game'>Play</a> 
