--- a/index.html
+++ b/index.html
@@ -88,13 +88,10 @@
 					</ul>
 				</div>
 			</div>
-			<div data-role="content" class='non-half'>
-				<div data-role='content' id='banklist'>
-					<p>Please play the memory game to add stories to story bank</p>
-					<a data-role='button' href='#game'>Play</a> 
-				</div>
+			<div data-role='content' id='banklist' class='non-half'>
+				<p>Please play the memory game to add stories to story bank</p>
+				<a data-role='button' href='#game'>Play</a> 
 			</div>
-			
 		</div>
 
 		<!-- ACCOUNT PAGE -->
