fix button width

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			</div>
 			<div data-role='content' id='banklist' class='non-half'>
 				<p>Please play the memory game to add stories to story bank</p>
-				<a data-role='button' href='#game'>Play</a> 
+				<a data-role='button' id='banklist-button' href='#game'>Play</a> 
 			</div>
 		</div>
 
