--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div data-role="header">
 				<div data-role='navbar'>
 					<ul class='menu'>
-						<li><a class='logo'  onclick='displayInfo()'><img src="box_logo.jpg" alt="logo"/></a></li>
+						<li><a class='logo'  href='#board'><img src="box_logo.jpg" alt="logo"/></a></li>
 						<li><a href='#bank' id='home-bank' class='ui-disabled'>STORY BANK</a></li>
 						<li><a href='#accounts' id='home-accounts' class='ui-disabled'>ACCOUNTS</a></li>
 						<li><a href='#game' id='home-game' class='ui-disabled'>GAME</a></li>
@@ -57,7 +57,7 @@
 					<input id="newTask" type="text" placeholder="Enter a new task..." />
 					<button id="addButton" type="submit">Add Task</button>
 					</form>-->
-						<p><a href="#accounts" data-role="button">Continue</a></p>
+						<p><a href="#board" data-role="button">Go!</a></p>
 						<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
 						<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>
 						<div id='rehearsalReminder'>
@@ -77,7 +77,7 @@
 			<div data-role="header">
 				<div data-role='navbar'>
 					<ul class='menu'>
-						<li><a class='logo' ref='#' class='click'><img src="box_logo.jpg" alt="logo"/></a></li>
+						<li><a class='logo' href='#' class='click'><img src="box_logo.jpg" alt="logo"/></a></li>
 						<li><a href='#bank' id='board-bank'>STORY BANK</a></li>
 						<li><a href='#accounts' id='board-accounts'>ACCOUNTS</a></li>
 						<li><a href='#game' id='board-game' >GAME</a></li>
@@ -113,7 +113,7 @@
 			<div data-role="header">
 				<div data-role='navbar'>
 					<ul class='menu'>
-						<li><a class='logo' ref='#'><img src="box_logo.jpg" alt="logo"/></a></li>
+						<li><a class='logo' href='#board'><img src="box_logo.jpg" alt="logo"/></a></li>
 						<li><a href='#bank' id='accounts-bank'>STORY BANK</a></li>
 						<li><a href='#accounts' class='click' id='accounts-accounts'>ACCOUNTS</a></li>
 						<li><a href='#game' id='accounts-game' >GAME</a></li>
@@ -141,7 +141,7 @@
 			<div data-role="header">
 				<div data-role='navbar'>
 					<ul class='menu'>
-						<li><a class='logo' ref='#'><img src="box_logo.jpg" alt="logo"/></a></li>
+						<li><a class='logo' href='#board'><img src="box_logo.jpg" alt="logo"/></a></li>
 						<li><a href='#bank' id='game-bank'>STORY BANK</a></li>
 						<li><a href='#accounts' id='game-accounts'>ACCOUNTS</a></li>
 						<li><a href='#game' class='click' id='game-game' >GAME</a></li>
