--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<input id="newTask" type="text" placeholder="Enter a new task..." />
 					<button id="addButton" type="submit">Add Task</button>
 					</form>-->
-						<p><a href="#board" data-role="button">Go!</a></p>
+						<p><a href="#board" data-role="button" id='home-rehearsal'>Go!</a></p>
 						<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
 						<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>
 						<div id='rehearsalReminder'>
@@ -85,9 +85,11 @@
 				</div>
 			</div>
 			<div data-role="content">
-				<div>Urgent Reherals</div>
-				<hr>
-				<div>Rehersals </div>
+				<div id='board-msg'>
+					<div>Urgent Reherals</div>
+					<hr>
+					<div>Rehersals </div>
+				</div>
 			</div>
 		</div>
 		<!-- BANK PAGE -->
@@ -95,7 +97,7 @@
 			<div data-role="header">
 				<div data-role='navbar'>
 					<ul class='menu'>
-						<li><a class='logo' ref='#'><img src="box_logo.jpg" alt="logo"/></a></li>
+						<li><a class='logo' href='#board'><img src="box_logo.jpg" alt="logo"/></a></li>
 						<li><a href='#bank' class='click' id='bank-bank'>STORY BANK</a></li>
 						<li><a href='#accounts' id='bank-accounts'>ACCOUNTS</a></li>
 						<li><a href='#game' id='bank-game' >GAME</a></li>
