--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 		<link href='https://fonts.googleapis.com/css?family=Chelsea+Market' rel='stylesheet' type='text/css' />
 		<link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css' />
 		<!-- bCrypt -->
-		<script src="MochiKit/MochiKit.js" type="text/javascript"></script>
-		<script src="Clipperz/Base.js" type="text/javascript"></script>
-		<script src="Clipperz/ByteArray.js" type="text/javascript"></script>
-		<script src="Clipperz/Crypto/BigInt.js" type="text/javascript"></script>
-		<script src="Clipperz/Crypto/SHA.js" type="text/javascript"></script>
-		<script src="Clipperz/Crypto/AES.js" type="text/javascript"></script>
-		<script src="Clipperz/Crypto/PRNG.js" type="text/javascript"></script>
+		<script src="jBcrypt/MochiKit/MochiKit.js" type="text/javascript"></script>
+		<script src="jBcrypt/Clipperz/Base.js" type="text/javascript"></script>
+		<script src="jBcrypt/Clipperz/ByteArray.js" type="text/javascript"></script>
+		<script src="jBcrypt/Clipperz/Crypto/BigInt.js" type="text/javascript"></script>
+		<script src="jBcrypt/Clipperz/Crypto/SHA.js" type="text/javascript"></script>
+		<script src="jBcrypt/Clipperz/Crypto/AES.js" type="text/javascript"></script>
+		<script src="jBcrypt/Clipperz/Crypto/PRNG.js" type="text/javascript"></script>
 
-		<script src="bCrypt.js" type="text/javascript"></script>
+		<script src="jBcrypt/bCrypt.js" type="text/javascript"></script>
 		<!-- phone gap stuff meta?-->
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0 user-scalable=0"/> 
