get rid of scripts

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 		<!--<script src="tutorial.js"></script>-->
 		<script type="text/javascript" src='sha2.js'></script>
 				<!-- bCrypt -->
-		<script src="jBcrypt/MochiKit/MochiKit.js" type="text/javascript"></script>
+		<!--<script src="jBcrypt/MochiKit/MochiKit.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/Base.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/ByteArray.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/Crypto/BigInt.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/Crypto/SHA.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/Crypto/AES.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/Crypto/PRNG.js" type="text/javascript"></script>
-		<script src="jBcrypt/bCrypt.js" type="text/javascript"></script>
-		
+		<script src="jBcrypt/bCrypt.js" type="text/javascript"></script>-->
+
 		<script src='pm.js'></script>
 		<!-- style sheets kendo jquery own -->
 		<link rel='stylesheet' href='kendo.common.min.css'/>
