--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<script type="text/javascript" src='sha2.js'></script>
 				<!-- bCrypt -->
 		<script src="jBcrypt/MochiKit/MochiKit.js" type="text/javascript"></script>
-		<script src="jBcrypt/Clipperz/Base.js" type="text/javascript"></script>
-		<!--<script src="jBcrypt/Clipperz/ByteArray.js" type="text/javascript"></script>
+		<!--<script src="jBcrypt/Clipperz/Base.js" type="text/javascript"></script>
+		<script src="jBcrypt/Clipperz/ByteArray.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/Crypto/BigInt.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/Crypto/SHA.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/Crypto/AES.js" type="text/javascript"></script>
