--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<script src="jBcrypt/Clipperz/Crypto/SHA.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/Crypto/AES.js" type="text/javascript"></script>
 		<script src="jBcrypt/Clipperz/Crypto/PRNG.js" type="text/javascript"></script>-->
-		<script src="isaac.js" type="text/javascript"></script>
+		<script src="jBcrypt/isaac.js" type="text/javascript"></script>
 		<script src="jBcrypt/bCrypt.js" type="text/javascript"></script>
 
 		<script src='pm.js'></script>
