new issac jbcrypt

--- a/jBcrypt/example.html
+++ b/jBcrypt/example.html
@@ -1,14 +1,7 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html;charset=windows-1252" >
 <head>
-<script src="MochiKit/MochiKit.js" type="text/javascript"></script>
-<script src="Clipperz/Base.js" type="text/javascript"></script>
-<script src="Clipperz/ByteArray.js" type="text/javascript"></script>
-<script src="Clipperz/Crypto/BigInt.js" type="text/javascript"></script>
-<script src="Clipperz/Crypto/SHA.js" type="text/javascript"></script>
-<script src="Clipperz/Crypto/AES.js" type="text/javascript"></script>
-<script src="Clipperz/Crypto/PRNG.js" type="text/javascript"></script>
-
+<script src="isaac.js" type="text/javascript"></script>
 <script src="bCrypt.js" type="text/javascript"></script>
 
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
