--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
 			</div>
 		</div>
 		<div data-role='page' data-title='Randomness Generator' id='generateRandomness'>
-			<div data-role='header'><h1>Let us make some real randomness</h1></div>
+			<div data-role='header'><h1>Let us make some entropy</h1></div>
 			<div data-role='content'>
 				<h2></h2>
-				<p>Please enter a few (at least 30) random characters to provide a seed for the pseudorandom generator.</p>
-				<p><textarea id='randomness' cols='100' rows='40'> </textarea></p>
-				<input id='submitRandom' type='submit' value='Generate Randomness & Start' onclick='startGame()'/>
-
+				<p>Please enter at least 30 random characters (at least 20 unique characters) to provide a seed for the pseudorandom generator.</p>
+				<p id='textCounter'><span id='charCounter'>0</span> characters and <span id='uniqueCharCounter'>0</span>unique characters</p>
+				<p><textarea id='randomnessTextBox' cols='100' rows='80' tabindex="1"> </textarea></p>
+				<input id='submitRandom' type='submit' value='Generate Randomness & Start'  tabindex="2" onclick='startGame()'/>
 			</div>
 		</div>
 		<div id="dialog" title="Basic dialog">
