--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 				<p>Please enter at least 30 random characters (at least 20 unique characters) to provide a seed for the pseudorandom generator.</p>
 				<p id='textCounter'><span id='charCounter'>0</span> characters and <span id='uniqueCharCounter'>0</span> unique characters</p>
 				<p><textarea id='randomnessTextBox' cols='100' rows='80' tabindex="1"> </textarea></p>
-				<button id='submitRandom' type='submit' value='submit' disabled='true' tabindex="2" onclick='startGame()'>Generate Randomness & Start</button>
+				<a data-role='button' id='submitRandom' type='submit' value='submit' disabled='true' tabindex="2" onclick='startGame()'>Generate Randomness & Start</a>
 			</div>
 		</div>
 		<div id="dialog" title="Basic dialog">
