--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 					<form action='#' id='accountsList'>
 						<div>
 							<input type='text' name='account-name' id='account-name' value='' placeholder='Enter Website'/> 
-						</div>
+						</div><!--
 						<fieldset data-role="controlgroup">
 							<input type="checkbox" name="checkbox-2" id="checkbox-2" class="custom" />
 							<label for="checkbox-2">use my own photos</label>
-        				</fieldset>
+        				</fieldset>-->
         				<button type="submit" name="submit" value="submit" id='submitbutton'>Add</button>
 					</form>
 				</div>
