--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 		<div data-role="page" data-title="home" id="home">
 			<div data-role="header">
 				<div data-role='navbar'>
-					<ul class='menu'>
-						<li><a class='logo'  href='#board'><img src="box_logo.jpg" alt="logo"/></a></li>
-						<li><a href='#bank' id='home-bank' class='ui-disabled'>STORY BANK</a></li>
-						<li><a href='#accounts' id='home-accounts' class='ui-disabled'>ACCOUNTS</a></li>
-						<li><a href='#game' id='home-game' class='ui-disabled'>GAME</a></li>
+					<ul class='menu' id='home-navbar'>
+						<li class='ui-disabled'><a class='logo'  href='#board'><img src="box_logo.jpg" alt="logo"/></a></li>
+						<li class='ui-disabled'><a href='#bank' id='home-bank' class='ui-disabled'>STORY BANK</a></li>
+						<li class='ui-disabled'><a href='#accounts' id='home-accounts' class='ui-disabled'>ACCOUNTS</a></li>
+						<li class='ui-disabled'><a href='#game' id='home-game' class='ui-disabled'>GAME</a></li>
 
 					</ul>
 				</div>
