--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 					<button id="addButton" type="submit">Add Task</button>
 					</form>-->
 						<p><a href="#board" data-role="button" id='home-rehearsal'>Go!</a></p>
-						<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
-						<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>
+						<p><a href='#' data-role='button' onclick='signOff()'>Sign Off</a></p>
+						<!--<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>-->
 						<div id='rehearsalReminder'>
 							<div id='urgentRehearsal'></div>
 							<div id='regularRehearsal'></div>
