--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 					<input id="newTask" type="text" placeholder="Enter a new task..." />
 					<button id="addButton" type="submit">Add Task</button>
 					</form>-->
-						<p><a href="#board" data-role="button" id='home-rehearsal'>Go!</a></p>
-						<p><a href='#' data-role='button' onclick='signOff()'>Sign Off</a></p>
+						<a href="#board" data-role="button" id='home-rehearsal'>Go!</a>
+						<a href='#' data-role='button' onclick='signOff()'>Sign Off</a>
 						<!--<a href='#' data-role='button' onclick='deleteAllStories()'>Delete</a>-->
 						<div id='rehearsalReminder'>
 							<div id='urgentRehearsal'></div>
