change randomness html text

--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@
 			</div>
 		</div>
 		<div data-role='page' data-title='Randomness Generator' id='generateRandomness'>
-			<div data-role='header'><h1>Let us make some entropy</h1></div>
+			<div data-role='header'><h1>Seed Generator</h1></div>
 			<div data-role='content'>
 				<h2></h2>
 				<p>Please enter at least 30 random characters (at least 20 unique characters) to provide a seed for the pseudorandom generator.</p>
 				<p><textarea id='randomnessTextBox' cols='100' rows='80' tabindex="1"> </textarea></p>
 				<p id='textCounter'><span id='charCounter'>0</span> characters and <span id='uniqueCharCounter'>0</span> unique characters</p>
-				<button id='submitRandom' type='submit' value='submit' name='submit' disabled='true' tabindex="2" onclick='startGame()'>Generate Randomness & Start</button>
+				<button id='submitRandom' type='submit' value='submit' name='submit' disabled='true' tabindex="2" onclick='startGame()'>Generate Randomness & Start the Game</button>
 			</div>
 		</div>
 		<div id="dialog" title="Basic dialog">
