--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</div>
 			<div data-role="content">
 				<img src='reminder.png' id='clock'/>
-				<a href="#mode43" data-role='button' onclick='populate43Bank()'>43-Story Mode</a>
+				<a data-role='button' onclick="location.href='43story.html'">43-Story Mode</a>
 				<div id="home-words">
 				<p>This is an app that generates random strong passwords, and helps you to remember them.</p>
 				</div>	
